<resources>
    <string name="app_name">login</string>

    <string name="pass_code">パスコード登録</string>
    <string name="change_code">パスコード変更</string>
    <string name="action_settings">Settings</string>
    <string name="error_message"><![CDATA[<<メッセージ表示エリア>>]]></string>
    <string name="sign_in">登録</string>
    <string name="change_btn">変更</string>
    <string name="title_activity_hoge">HogeActivity</string>
    <string name="title_activity_foo">FooActivity</string>
    <string name="success_message">ログイン成功</string>

</resources>
