<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.student.login.HogeActivity">

    <TextView
        android:text="@string/change_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_gravity="start"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:layout_marginTop="72dp" />


    <TextView
        android:text="@string/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textMessage"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/oldCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textMessage">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/editText1"
            android:maxLength="1"
            android:layout_marginTop="44dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/editText2"
            android:maxLength="1"
            android:layout_marginTop="44dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/editText3"
            android:maxLength="1"
            android:layout_marginTop="44dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/editText4"
            android:maxLength="1"
            android:layout_marginTop="44dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/textMessage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/editText5"
            android:maxLength="1"
            android:layout_marginTop="88dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/editText6"
            android:maxLength="1"
            android:layout_marginTop="88dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/editText7"
            android:maxLength="1"
            android:layout_marginTop="88dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/editText8"
            android:maxLength="1"
            android:layout_marginTop="88dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_btn"
        android:id="@+id/changeBtn"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="121dp" />
</RelativeLayout>
